# uaamg

./: .gitignore  CMakeLists.txt  CMakePresets.json
FLIP_vdb/: main.cpp
Scene_Houdini/: .gitignore
Scene_Houdini/vis_buckling/: sphere_source.vdb
Scene_Houdini/vis_cow/: README.txt  config_cow.yaml  source_vdb_cow.vdb
Scene_Houdini/vis_cut_bunny/: cross_wireframe.vdb  cross_wireframe_low_res.vdb
Scene_Houdini/vis_honey/: README.txt  config.yaml  honey_comp.hip  source.vdb  source_sphere.vdb  strawberry.vdb
